force-app/main/default/objects/Contact/fields/Geo_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Geo_Accuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geo Accuracy</label>
    <type>Checkbox</type>
</CustomField>