force-app/main/default/objects/Contact/fields/isPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>isPersonAccount__c</fullName>
    <formula>Account.IsPersonAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPersonAccount</label>
    <type>Checkbox</type>
</CustomField>