force-app/main/default/objects/Contact/fields/Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Id__c</fullName>
    <label>Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>