force-app/main/default/objects/Contact/fields/No_Longer_There__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_There__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer There</label>
    <type>Checkbox</type>
</CustomField>