force-app/main/default/objects/Contact/fields/Primary_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_City__c</fullName>
    <label>Primary Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>