force-app/main/default/objects/Contact/fields/Primary_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Country__c</fullName>
    <label>Primary Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>