force-app/main/default/objects/Contact/fields/Primary_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Street__c</fullName>
    <label>Primary Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>