force-app/main/default/objects/Contact/fields/Primary_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mailing_Zip_Code__c</fullName>
    <label>Primary Mailing Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>