force-app/main/default/objects/Contact/validationRules/Contact_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Country</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( OR(ISPICKVAL( Primary_Mailing_Country__c ,&quot;US&quot;),ISPICKVAL(Primary_Mailing_Country__c,&quot;&quot;))))</errorConditionFormula>
    <errorMessage>Input Proper Contact Mailing Country</errorMessage>
</ValidationRule>