force-app/main/default/objects/Contact/validationRules/Contact_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_State</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( OR(ISPICKVAL(Primary_Mailing_State__c,&quot;AK&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;AL&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;AR&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;AZ&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;CA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;CO&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;CT&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;DC&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;DE&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;FL&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;GA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;HI&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;IA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;ID&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;ID&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;IL&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;IN&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;KS&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;KY&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;LA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MD&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;ME&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MI&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MN&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MO&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MS&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;MT&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NC&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;ND&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NE&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NH&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NJ&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NM&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NV&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;NY&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;OH&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;OK&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;OR&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;PA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;RI&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;SC&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;SD&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;TN&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;TX&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;UT&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;VA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;VT&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;WA&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;WI&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;WV&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;WY&quot;),ISPICKVAL(Primary_Mailing_State__c,&quot;&quot;))))</errorConditionFormula>
    <errorMessage>Input Proper Contact State</errorMessage>
</ValidationRule>